--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ font-family: 'Times New Roman', Times, serif ;
 font-stretch: narrower;
 }
 
-
+.header {
+  background-image: ;
+}
 
 .header div {
     padding-top: 15px;
@@ -102,7 +104,7 @@ top: 200px;
     background-size:  cover ;
     background-position: center ;
     
-;}
+}
 
 
 .header h1 {
