--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,7 @@ font-family: 'Times New Roman', Times, serif ;
 font-stretch: narrower;
 }
 
-.header {
-  background-image: ;
-}
+
 
 .header div {
     padding-top: 15px;
@@ -100,11 +98,11 @@ top: 200px;
     height: 800px;
     width: 100%;
     object-fit: cover;
-    background-image: url("ac606c11f55f544baab1cdb332c01e98.jpg");
+    background-image: url("assets\ac606c11f55f544baab1cdb332c01e98.jpg");
     background-size:  cover ;
     background-position: center ;
     
-}
+;}
 
 
 .header h1 {
